Add google site verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Benjamin Walker Bond&#x27;s Design Portfolio</title>
+  <meta name="google-site-verification" content="wIAf6QOgHU5VBz9c0wsiZSsUrXkhs2h2zEJ6RdjSuJw" />
   <meta content="Quality website solutions for a good price." name="description">
   <meta content="Benjamin Walker Bond&#x27;s Design Portfolio" property="og:title">
   <meta content="Quality website solutions for a good price." property="og:description">
