Added google site tags

--- a/about.html
+++ b/about.html
@@ -2,6 +2,15 @@
 <!--  Last Published: Fri Nov 06 2020 21:31:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f0dff734f36df19fb81331d" data-wf-site="5f0dff734de38616a99ae4cf">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KF1N7DKJQC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KF1N7DKJQC');
+</script>
   <meta charset="utf-8">
   <title>About</title>
   <meta content="Information about Benjamin Walker Bond&#x27;s career, experience, and talent." name="description">
