--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!--  Last Published: Fri Nov 06 2020 21:31:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f0dff734f36df636c813318" data-wf-site="5f0dff734de38616a99ae4cf">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KF1N7DKJQC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KF1N7DKJQC');
+</script>
   <meta charset="utf-8">
   <title>Benjamin Walker Bond&#x27;s Design Portfolio</title>
   <meta name="google-site-verification" content="wIAf6QOgHU5VBz9c0wsiZSsUrXkhs2h2zEJ6RdjSuJw" />
