--- a/work/project-1.html
+++ b/work/project-1.html
@@ -3,6 +3,15 @@
 <!--  Last Published: Thu Oct 08 2020 01:44:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f0dff734f36df9b6781331e" data-wf-site="5f0dff734de38616a99ae4cf">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KF1N7DKJQC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KF1N7DKJQC');
+</script>
   <meta charset="utf-8">
   <title>Data Lab Website Project</title>
   <meta content="An overview of the creation of the Data Lab 12 website. Covers history, timeline, and content." name="description">
