--- a/work/project-2.html
+++ b/work/project-2.html
@@ -3,6 +3,15 @@
 <!--  Last Published: Thu Oct 08 2020 01:44:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f0dff734f36dff3ad813320" data-wf-site="5f0dff734de38616a99ae4cf">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KF1N7DKJQC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KF1N7DKJQC');
+</script>
   <meta charset="utf-8">
   <title>Witches Brew Application</title>
   <meta content="A reverse search engine app designed around cocktails. Input ingredient(s) and get recommended cocktail recipes that contain those ingredients. Technology Stack: HTML, CSS, Bootstrap, JavaScript, Firebase." name="description">
