--- a/work/project-3.html
+++ b/work/project-3.html
@@ -3,6 +3,15 @@
 <!--  Last Published: Thu Oct 08 2020 01:44:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f0dff734f36df1de2813321" data-wf-site="5f0dff734de38616a99ae4cf">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KF1N7DKJQC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KF1N7DKJQC');
+</script>
   <meta charset="utf-8">
   <title>Springer Counseling Website Project</title>
   <meta content="This site was created for a Licensed Professional Counselor (LPC) by the name of Dr. Gary Springer. It highlights his areas of expertise, his life story, and allows potential clients to contact and locate him." name="description">
