--- a/work/project-4.html
+++ b/work/project-4.html
@@ -3,6 +3,15 @@
 <!--  Last Published: Thu Oct 08 2020 01:44:48 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f0dff734f36df5cde813322" data-wf-site="5f0dff734de38616a99ae4cf">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KF1N7DKJQC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KF1N7DKJQC');
+</script>
   <meta charset="utf-8">
   <title>Attorney Kristel Website Project</title>
   <meta content="I created this site for an Attorney near Houston, TX. This site showcases the focuses of his work and provides an easily accessible contact form to increase the chance of click-to-sales." name="description">
