--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <div id="w-node-7dee623c62c1-fb81331d" class="about-head-text-wrap">
           <div class="label cc-about-light">Hey there!</div>
           <h2 class="hi-there-heading">I&#x27;m Benjamin Bond</h2>
-          <p class="paragraph-light">I’m a web designer based out of San Marcos, TX. I’m originally from Boerne, TX. </p>
+          <p class="paragraph-light">I’m a web designer based out of San Marcos, TX. I’m originally from Boerne, TX. Currently, I'm seeking a role as a Junior Web Developer. </p>
         </div>
         <div id="w-node-2472df33ef96-fb81331d" class="div-block-4"><img src="images/drew_alex_wedding-698_websize.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 92vw, 800px" srcset="images/drew_alex_wedding-698_websize-p-1080.jpeg 1080w, images/drew_alex_wedding-698_websize.jpg 1600w" alt="" class="image"></div>
       </div>
@@ -63,7 +63,7 @@
       <div class="w-layout-grid skills-grid">
         <div id="w-node-4224828ffd8a-fb81331d" class="skillset-wrap">
           <h3>My Career so far</h3>
-          <p class="paragraph-light">Over my time at Texas State University, I have worked on various web development and brand design projects. I will be graduating from Texas State University in the Fall of 2020. </p>
+          <p class="paragraph-light">Over my time at Texas State University, I have worked on three professional web development and brand design projects. I graduated Texas State University in the Fall of 2020. </p>
         </div>
         <div id="w-node-4224828ffd8f-fb81331d" class="w-layout-grid services-items-grid">
           <div id="w-node-4224828ffd90-fb81331d">
@@ -87,7 +87,7 @@
           <li class="featured-item-wrap">
             <div class="speaking-text">Exploration through code</div>
             <div class="speaking-detail">(Passion)</div>
-            <a href="#" class="reference-link">I enjoy the creation process. I have always been a builder and creator. No matter the problem, I love to give my best shot at it. </a>
+            <a href="#" class="reference-link">I enjoy the creation process. I have always been a builder and creator. No matter the problem, I don't stop until it's solved. </a>
           </li>
           <li class="featured-item-wrap">
             <div class="speaking-text">Nature and The Outdoors</div>
@@ -97,7 +97,7 @@
           <li class="featured-item-wrap">
             <div class="speaking-text">Fellowship through online community</div>
             <div class="speaking-detail">(Passtime)</div>
-            <a href="#" class="reference-link">I have kept in touch with my friends from high-school and made new friends in college all by harnessing the power of the Internet. Keeping in touch with friends has always been important to me; thus, I&#x27;ve made it a point to adapt to the current fads in online gaming to ensure I can stay connected with old friends.</a>
+            <a href="#" class="reference-link">I have kept in touch with my friends from high-school and made new friends in college all by harnessing the power of the Internet. Keeping in touch with friends has always been important to me; thus, I&#x27;ve made it a point to always stay connected with good people. </a>
           </li>
           <li class="featured-item-wrap">
             <div class="speaking-text">Family</div>
@@ -115,21 +115,25 @@
             <div class="label cc-speaking-label">Upcoming</div>
             <ul role="list" class="w-list-unstyled">
               <li>
-                <div class="speaking-text">Graduation</div>
-                <div class="speaking-detail">(Dec 2020)</div>
+                <div class="speaking-text">My first day as a Junior Web Developer.</div>
+                <div class="speaking-detail">(TBD 2021)</div>
               </li>
               <li>
                 <div class="speaking-text">Searching for next freelance project.</div>
                 <div class="speaking-detail">(September 2020)</div>
               </li>
               <li>
-                <div class="speaking-text">Learning React. Keep up with my progress on my blog.</div>
+                <div class="speaking-text">Learning React. Keep up with my progress on my GitHub.</div>
                 <div class="speaking-detail">(September 2020)</div>
               </li>
             </ul>
           </div>
           <div class="label">Past</div>
           <ul role="list" class="w-list-unstyled">
+            <li>
+              <div class="speaking-text cc-past-speaking">Graduated from Texas State University with a B.S. in Computer Science.</div>
+              <div class="speaking-detail">(Dec. 2020)</div>
+            </li>
             <li>
               <div class="speaking-text cc-past-speaking">Began Freelancing</div>
               <div class="speaking-detail">(Jun 2020)</div>
@@ -166,7 +170,7 @@
     </div>
   </div>
   <div>
-    <div class="container-3 w-container">
+    <!-- <div class="container-3 w-container">
       <div class="html-embed-2 w-embed w-script">
         <blockquote class="instagram-media" data-instgrm-captioned="" data-instgrm-permalink="https://www.instagram.com/p/BG1lq-Oj1Ud/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
           <div style="padding:16px;">
@@ -267,7 +271,7 @@
         </blockquote>
         <script async="" src="https://www.instagram.com/embed.js"></script>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="section">
     <div class="w-layout-grid social-media-grid"><img src="images/Ben-and-Drew-on-Vacation.jpg" id="w-node-8239d41d1e9d-fb81331d" alt=""><img src="images/Ben-on-Jetski-at-Canyon-Lake.jpg" id="w-node-8239d41d1e9e-fb81331d" sizes="(max-width: 479px) 91vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 3085px) 98vw, 3024px" srcset="images/Ben-on-Jetski-at-Canyon-Lake-p-500.jpeg 500w, images/Ben-on-Jetski-at-Canyon-Lake-p-1080.jpeg 1080w, images/Ben-on-Jetski-at-Canyon-Lake-p-1600.jpeg 1600w, images/Ben-on-Jetski-at-Canyon-Lake-p-2000.jpeg 2000w, images/Ben-on-Jetski-at-Canyon-Lake-p-2600.jpeg 2600w, images/Ben-on-Jetski-at-Canyon-Lake.jpg 3024w" alt=""><img src="images/Drews-Wedding-Bachelor-Picture.jpg" id="w-node-8239d41d1e9f-fb81331d" alt=""><img src="images/ellie-with-shirt.jpg" id="w-node-8239d41d1ea0-fb81331d" sizes="(max-width: 479px) 91vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 3085px) 98vw, 3024px" srcset="images/ellie-with-shirt-p-1080.jpeg 1080w, images/ellie-with-shirt-p-1600.jpeg 1600w, images/ellie-with-shirt-p-2000.jpeg 2000w, images/ellie-with-shirt-p-2600.jpeg 2600w, images/ellie-with-shirt.jpg 3024w" alt=""><img src="images/Ben-and-Baby.jpg" id="w-node-8239d41d1ea1-fb81331d" alt=""><img src="images/Savannah-and-Ben-at-Canyon-Lake.JPG" id="w-node-8239d41d1ea3-fb81331d" sizes="(max-width: 479px) 91vw, (max-width: 767px) 96vw, 94vw" srcset="images/Savannah-and-Ben-at-Canyon-Lake-p-500.jpeg 500w, images/Savannah-and-Ben-at-Canyon-Lake-p-800.jpeg 800w, images/Savannah-and-Ben-at-Canyon-Lake.JPG 960w" alt=""></div>
@@ -277,7 +281,7 @@
       <div class="contact">
         <div class="contact-headline">
           <h3>Want to get in touch?<br>Drop me a line!</h3>
-          <p class="paragraph-light">Please provide your name, email address, and a message containing your much appreciated email.</p>
+          <p class="paragraph-light">Please provide your name, email address, and a message containing your question/request.</p>
         </div>
         <div class="contact-form-wrap">
           <div class="w-form">
