Update Landing Page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="carrer-headline-wrap">
           <h2>My experience</h2>
-          <p class="paragraph-light">I have a broad range of experience. In everything I do, I focus on producing meaningful results. </p>
+          <p class="paragraph-light">I've created two fullstack web applications, worked in an agile development team alongside GitHub employees to apportion a $5,000 grant, and shipped 3 production ready websites for clients. In everything I do, I focus on producing meaningful results. </p>
         </div>
         <div class="w-layout-grid work-experience-grid">
           <div id="w-node-8f65c72d8fd1-6c813318" class="work-position-wrap">
@@ -107,7 +107,7 @@
             <div class="paragraph-tiny cc-paragraph-tiny-light">Oct 2019 — Aug 2020<br></div>
           </div>
           <div id="w-node-8f65c72d8fe1-6c813318" class="work-position-wrap">
-            <div class="position-name-text">Freelance Web Designer</div>
+            <div class="position-name-text">Freelance Web Developer</div>
             <div class="paragraph-light cc-position-name">Graphic Design/ Web Developer</div>
             <div class="paragraph-tiny cc-paragraph-tiny-light">July 2020 — current<br></div>
           </div>
