Update Landing Page

--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
         </div>
         <div class="footer-wrap">
           <div class="footer-links">
-            <a href="https://www.facebook.com/ben.bond.14" target="_blank" class="footer-item">Facebook</a>
+            <a href="www.linkedin.com/in/benjamin-walker-bond" target="_blank" class="footer-item">LinkedIn</a>
             <a href="https://www.instagram.com/benbond96/" target="_blank" class="footer-item">Instagram</a>
+            <a href="https://github.com/BenjaminWalkerBond" target="_blank" class="footer-item">GitHub</a>
           </div>
           <div class="paragraph-light footer-text">Created by Benjamin Walker Bond</div>
         </div>
