--- a/about.html
+++ b/about.html
@@ -53,6 +53,8 @@
           <div class="label cc-about-light">Hey there!</div>
           <h2 class="hi-there-heading">I&#x27;m Benjamin Bond</h2>
           <p class="paragraph-light">I’m a web designer based out of San Marcos, TX. I’m originally from Boerne, TX. Currently, I'm seeking a role as a Junior Web Developer. </p>
+          <a style="display:inline-flex;"href="https://github.com/BenjaminWalkerBond"><img src="images/GitHub-Mark-64px.png"></img></a>
+          <a style="display:inline-flex;"href="https://www.linkedin.com/in/ben-bond-b800911a2/"><img src="images/linked-in-64.png"></img></a>
         </div>
         <div id="w-node-2472df33ef96-fb81331d" class="div-block-4"><img src="images/drew_alex_wedding-698_websize.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 92vw, 800px" srcset="images/drew_alex_wedding-698_websize-p-1080.jpeg 1080w, images/drew_alex_wedding-698_websize.jpg 1600w" alt="" class="image"></div>
       </div>
