Update portfolio with attorney kristel path

--- a/work/project-4.html
+++ b/work/project-4.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="w-layout-grid project-overview-grid">
         <div id="w-node-f2c6de040bbf-de813322">
-          <h1 class="heading-jumbo"><a href="https://attorneykristel.com/index.html">attorneykristel.com</a></h1>
+          <h1 class="heading-jumbo"><a href="https://benjaminwalkerbond.github.io/Erwin-Kosal-Kristel-Attorney-at-Law/">attorneykristel.com</a></h1>
           <div class="paragraph-light">Web Design</div>
         </div>
         <div id="w-node-f2c6de040bc4-de813322">
@@ -57,8 +57,8 @@
           <div class="position-name-text">My Contributions</div>
           <div class="paragraph-light cc-position-name">
             <ul role="list">
-              <li>Designed entire website for Erwin Kosal Kristel. Requested, integrated, and style content for subpages</li>
-              <li>Ensured entire site scales perfectly to mobile.</li>
+              <li>Designed a website for Erwin Kosal Kristel. Requested, integrated, and styled content for subpages</li>
+              <li>Ensured entire site scales to mobile.</li>
               <li>Optimized the site for SEO.</li>
             </ul>
           </div>
