--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="paragraph-light">Web Designer</div>
             </div>
           </div>
-          <h1 id="w-node-490db9f35e98-6c813318" class="heading-jumbo"><strong>Hey there</strong>! <strong class="bold-text">I’m a creative graphic and web designer based in San Marcos, TX.</strong></h1>
+          <h1 id="w-node-490db9f35e98-6c813318" class="heading-jumbo"><strong>Hey there</strong>! <strong class="bold-text">I’m a creative graphic and web designer based in San Antonio, TX.</strong></h1>
         </div>
       </div>
       <div class="div-block"></div>
